--- a/r10.html
+++ b/r10.html
@@ -20,6 +20,14 @@
  <b>My Favorite Raspberry Pi Project</b>
   <p>My favorite project was making an emoji. I made the US Flag because America is my favorite place in the whole world and it looked wicked cool.</p>
   <br>
-  <img src="both.jpg"/>
+  <img src="pi5.jpg"/>
+  <br>
+  <b>Other Images</b>
+  <img src="pi1.jpg"/>
+  <img src="pi2.jpg"/>
+  <img src="pi3.jpg"/>
+  <img src="pi4.jpg"/>
+  <img src="pi6.jpg"/>
+  <img src="pi7.jpg"/>
 </body>
           </html>
