--- a/r11.html
+++ b/r11.html
@@ -9,22 +9,27 @@
   </head>
   <h1 style="color:midnightblue">Rotation 1</h1>
   <b>Project Description</b>
-  <p>Type here</p>
+  <p>My project was a car powered by the bluetooth DFrobot. I used the laser cutter to make the car's body. The axis and wheels were 3D printed. The DFrobot is an Arduino project so I downloaded the code into the Arduino program. Also, I downloaded the remote control app to control the car. Unfortunately, the car did not work. For some reason, the motor would not turn even though it showed that the motor should be turning on the computer. Despite this mishap, I am still determined to make it work and will look into what went wrong over the summer.</p>
   <br>
   <img src="site1.jpg"/>
   <br>
   <b>Equiptment and Materials</b>
-  <p>Type here</p>
+  <p>3D Printer</p>
+  <p>Laser engraver</p>
+  <p>Arduino BLE Romeo DFrobot</p>
+  <p>Hot Glue</p>
+  <p>Motor</p>
+  <p>Batteries</p>
   <br>
   <img src="site1.jpg"/>
   <br>
   <b>Time Spent</b>
-  <p>Type here</p>
+  <p>I spent multiple hours on this project, both working on it and making a plan for it.</p>
   <br>
   <img src="site1.jpg"/>
   <br>
   <b>Machine Settings and Configurations</b>
-  <p>Type here</p>
+  <p>Laser Engraver:</p>
   <br>
   <img src="site1.jpg"/>
   <br>
