--- a/r11.html
+++ b/r11.html
@@ -39,7 +39,7 @@
   <img src="site1.jpg"/>
   <br>
   <b>Steps</b>
-  <p>Type here</p>
+  <p>Step 1: I decided what project I wanted to do: A car powered by Arduino.</p>
   <br>
   <img src="site1.jpg"/>
   <br>
