--- a/r11.html
+++ b/r11.html
@@ -41,7 +41,9 @@
   <b>Steps</b>
   <p>Step 1: I decided what project I wanted to do: A car powered by Arduino.</p>
   <br>
-  <img src="site1.jpg"/>
+  <img src="think.jpg"/>
   <br>
+  <p>Step 2: I laser printed a box to be the body of my car.</p>
+  <img src="finallaser.jpg"/>
 </body>
           </html>
