--- a/r11.html
+++ b/r11.html
@@ -43,7 +43,19 @@
   <br>
   <img src="think.jpg"/>
   <br>
-  <p>Step 2: I laser printed a box to be the body of my car.</p>
+  <p>Step 2: I laser printed a box to be the body of my car. I used Makercase (See Rotation 4) to make the box and then cut it out on the laser engraver.</p>
+  <br>
+  <a href="carbody!.cdr">Car Body File<a/>
+    <br>
   <img src="finallaser.jpg"/>
+    <br>
+    <p>Step 3: I 3D printed the wheels and Axles. I made the design using CAD. I used the program Fusion 360  to make the design, then I uploaded the stl file into makerbot. Next I printed it on the 3D printer.
+      <br>
+     <a href="THEwheel.makerbot">Wheel File<a/>
+       <br>
+       <img src="final3d.jpg"/>
+      <br>
+      
+    <br>
 </body>
           </html>
