--- a/r11.html
+++ b/r11.html
@@ -50,7 +50,15 @@
        <br>
        <img src="final3d.jpg"/>
       <br>
-      
+       <p>Step 4: I coded the DFrobot. Unfortunately, even though the computer said it was working, the motor would not turn. Mr. Gerber and I tried changing the code, the motor, and the power source, but nothing worked.</p>
+      <img src="finalarduino.jpg"/>
     <br>
-</body>
+       <p>Step 5: I put the car together. I glued the wheels to the axles and put the axis through the car body. Next I put the Arduino in the car body and the motor into the front wheel.</p>
+<br>
+       <img src="finsihed1.jpg"/>
+       <br>
+       <img src="finished2.jpg"/>
+       <br>
+       <img src="finished3.jpg"/>
+       </body>
           </html>
