--- a/r11.html
+++ b/r11.html
@@ -30,13 +30,12 @@
   <br>
   <br>
   <b>What I Learned</b>
-  <p>Type here</p>
+  <p>I learned sometimes things I make will not work out. I also feel much more comfortable with the process of arduino, laser cutting, CAD, and additive manufacturing.</p>
   <br>
   <br>
   <b>Steps</b>
   <p>Step 1: I decided what project I wanted to do: A car powered by Arduino.</p>
   <br>
-  <img src="think.jpg"/>
   <br>
   <p>Step 2: I laser printed a box to be the body of my car. I used Makercase (See Rotation 4) to make the box and then cut it out on the laser engraver.</p>
   <br>
