--- a/r1.html
+++ b/r1.html
@@ -1,6 +1,101 @@
 <!DOCTYPE html>
 <html>
 <title>Rotation 1 - Principles of Digital Fabrication, Design Challenges, and HTML</title>
+  <br>
+	<br>
+	
+	<nav>
+	<ul>
+		<li><a href="index.html">Index</a></li>
+		<li><a href="aboutme.html">About Me </a></li>
+		<li><a href="r1.html">Rotation 1 </a></li>
+		<li><a href="r2.html">Rotation 2</a></li>
+		<li><a href="r3.html">Rotation 3 </a></li>
+		<li><a href="r4.html">Rotation 4 </a></li>
+		<li><a href="r5.html">Rotation 5 </a></li> 
+		<li><a href="r6.html">Rotation 6 </a></li>
+		<li><a href="r7.html">Rotation 7 </a></li>
+		<li><a href="r8.html">Rotation 8 </a></li>
+		<li><a href="r9.html">Rotation 9</a></li>
+		<li><a href="r10.html">Rotation 10 </a></li>
+		<li><a href="r11.html">Rotation 11</a></li>
+		<li><a href="r12.html">Rotation 12</a></li>
+	</ul>
+	</nav>
+<style>
+
+	img{
+		padding-left:2.1em;
+		align: center;
+		float: left;
+    		margin-left: 10%;
+    		border-top: 0;
+	}
+	
+	h1{
+		font-family:Georgia;
+		color:rgba(46, 145, 251,0.5);
+		padding:10px;
+		font-size: 70px;
+	}
+	
+	p{
+		font-family:Georgia;
+		color:#FFFFFF;
+		padding:1em;
+	}
+	
+	h3{
+		padding:1em;
+	}
+	
+	header{
+		background:rgb(240, 240, 240);
+		text-align:center;
+	}
+	
+	nav{  
+		color:gray;
+		width:165px;
+		float:left;
+		float:top;
+		height: 95%;
+		overflow: auto;
+		font-size: 19px;
+		font-family:Georgia;
+	}
+	
+	ul{
+		list-style-type:none;
+		padding:0px;
+		margin:0px;
+	}
+	
+	li a{
+		display:block;
+		padding:1em;
+		color:rgba(46, 145, 251,0.5);
+		margin:0px;
+		text-decoration:none;
+	}
+	
+	li a:hover {
+		background-color:rgba(255, 99, 71, 0.2);
+		color:#878B8D;
+	}
+	
+	div{
+		Margin-top:25px;
+	}
+
+	header.update{
+		background:rgba(64, 150, 255, .2);
+		color:rgba(46, 145, 251,0.4); 
+		margin-left:275px;
+		border:3px double #ff751a;
+	}
+	
+	}
 <head>
 <style>
   h1 {font-family:times new roman;font-size:200%;text-align:center;}
