--- a/r6.html
+++ b/r6.html
@@ -46,5 +46,6 @@ h1 {font-family:times new roman;font-size:200%;text-align:center;}
     <br>
     <img src="pewter4.jpg"/>
     <br>
+    <a href="index.html">Home<a/>
 </body>
           </html>
