--- a/r11.html
+++ b/r11.html
@@ -59,5 +59,7 @@
        <img src="finished2.jpg"/>
        <br>
        <img src="finished3.jpg"/>
+       <br>
+       <a href="index.html">Home<a/>
        </body>
           </html>
